compiler/w_session/tests/errors/function-typecheck.stderr
tests/errors/function-typecheck.w:1:12: error: type mismatch
fn main(): u32 {}
           ^^^
